[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/OpticalMemoryDebug.gd" id="1_optical_dbg"]

[node name="OpticalMemoryDebug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_optical_dbg")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Optical Memory Debug Viewer"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="Controls" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ModeLabel" type="Label" parent="Panel/VBoxContainer/Controls"]
layout_mode = 2
text = "Render Mode:"

[node name="ModeOption" type="OptionButton" parent="Panel/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="GenerateButton" type="Button" parent="Panel/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
text = "Generate"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ViewportContainer" type="SubViewportContainer" parent="Panel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

